--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -1,7 +1,7 @@
 name: Spellcheck
 on:
   schedule:
-    - cron: '0 5 * * 1-5' # Run Mon-Fri at 7AM UTC
+    - cron: '0 5 * * *'
   workflow_dispatch:
 jobs:
   spellcheck:
