Run apt update before installing packages

--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install packages
         run: |
+          sudo apt update
           sudo apt install -y python-dev libhunspell-dev
       - name: Set up Python 3
         uses: actions/setup-python@v3
