--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -19,6 +19,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v2
+        with:
+          enable-cache: true
+          version: "0.4.15"
       - name: Run checks
         run: |
           ./scripts/update_tmx.sh
